@@ -29,13 +29,16 @@ LIST(APPEND JavaScriptCore_SOURCES
     dfg/DFGDriver.cpp
     dfg/DFGGraph.cpp
     dfg/DFGJITCodeGenerator.cpp
+    dfg/DFGJITCodeGenerator64.cpp
     dfg/DFGJITCodeGenerator32_64.cpp
     dfg/DFGJITCompiler.cpp
     dfg/DFGOperations.cpp
     dfg/DFGOSREntry.cpp
+    dfg/DFGOSRExitCompiler64.cpp
     dfg/DFGOSRExitCompiler32_64.cpp
     dfg/DFGPropagator.cpp
     dfg/DFGRepatch.cpp
     dfg/DFGSpeculativeJIT.cpp
+    dfg/DFGSpeculativeJIT64.cpp
     dfg/DFGSpeculativeJIT32_64.cpp
 )
